--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.4.2",
     "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "typescript": "^5.0.4"
   },
   "dependencies": {
