--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/eslint-module": "^4.0.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.39.0",
