--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "format": "prettier .  --write"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^0.5.5",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/eslint-module": "^4.0.2",
+    "@nuxtjs/eslint-module": "^4.1.0",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18",
-    "@typescript-eslint/parser": "^5.59.0",
-    "eslint": "^8.39.0",
+    "@types/node": "^18.16.16",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.4.2",
+    "nuxt": "^3.5.2",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@hennge/vue3-pagination": "^1.0.17",
-    "@nuxtjs/tailwindcss": "^6.6.6",
-    "@storyblok/nuxt": "^5.4.2",
+    "@nuxtjs/tailwindcss": "^6.7.0",
+    "@storyblok/nuxt": "^5.4.8",
     "dayjs": "^1.11.7"
   }
 }
